Fix Grimoire screen errors